<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Surah</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="reciter">Reciter</string>
    <string name="sheikh">Sheikh Maher Al Muaiqly</string>
    <string name="nourallah">Nourallah Mohammed Al Bebari</string>
    <string name="settings">Settings</string>
    <string name="LANGUAGE_PREFERENCES">LanguagePref</string>
    <string name="copy_success">Copy database successfully</string>
    <string name="copy_error">Copy database error</string>
    <string name="pleaseWait">Please wait&#8230;</string>
    <string name="nowPlaying">Now Playing</string>
    <string name="surah_title">Surah Al-Fatihah</string>
    <string name="duration">2.5</string>
    <string name="sheikh_maher">Sheikh Maher Ab Muaiqly</string>
    <string name="search">Search</string>
    <string name="desc">No need text for this image</string>
    <string name="select_reciter">Please select a reciter</string>
    <string name="select_language_reciter">Please select a language and a reciter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_connection">Please check your internet connection.</string>
    <string name="splash_text">Surah \n  سورة</string>
    <string name="search_arabic">بحث</string>
    <string name="now_playing_arabic">الان العب</string>
</resources>
