<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="Back"/>

        <TextView
            android:id="@+id/text_view_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/button_back"
            android:layout_centerInParent="true"
            android:textColor="@color/colorCoralTree"
            android:text="@string/settings"/>

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="Next"/>

    </RelativeLayout>


    <TextView
        android:id="@+id/text_view_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorCoralTree"
        android:text="@string/language"/>

    <RadioGroup
        android:id="@+id/radio_group_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_button_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"/>

        <RadioButton
            android:id="@+id/radio_button_arabic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arabic"/>

    </RadioGroup>

    <TextView
        android:id="@+id/text_view_reciter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorCoralTree"
        android:text="@string/reciter"/>

    <RadioGroup
        android:id="@+id/radio_group_reciter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_button_sheikh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sheikh"/>

        <RadioButton
            android:id="@+id/radio_button_nourallah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nourallah"/>

    </RadioGroup>

</LinearLayout>
