<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background"
        android:orientation="vertical">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_30sdp">

        <ImageView
                android:id="@+id/image_view_back"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_arrow"/>
        <TextView
                android:id="@+id/text_view_playing"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:textColor="@color/colorCoralTree"
                android:textSize="@dimen/text_normal_size"
                android:text="@string/nowPlaying"/>
        <ImageView
               android:id="@+id/image_view_setting"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_setting"/>

    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:contentDescription="null"
                android:src="@drawable/ic_launcher_app"/>
        <SeekBar
                android:id="@+id/seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:progressBackgroundTint="@color/colorCoralTree"
                android:scrollbarTrackHorizontal="@color/colorCoralTree"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/text_view_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorCoralTree"
                    android:textSize="@dimen/text_normal_size"
                    android:layout_alignParentRight="true"
                    android:text="2.5"/>

        </RelativeLayout>

        <TextView
                android:id="@+id/text_view_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/surah_title"
                android:textSize="@dimen/text_header_size"
                android:gravity="center"
                android:textColor="@color/colorWhite"/>
        <TextView
                android:id="@+id/text_view_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/text_normal_size"
                android:textColor="@color/colorCoralTree"
                android:text="@string/sheikh_maher"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:orientation="horizontal">
            <ImageView
                    android:id="@+id/image_view_shuffle"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/ic_shuffle"/>
            <ImageView
                    android:id="@+id/image_view_reverse"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@+id/image_view_shuffle"
                    android:src="@drawable/ic_reverse"/>
            <ImageView
                    android:id="@+id/image_view_play"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_play"/>
            <ImageView
                    android:id="@+id/image_view_forward"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_toLeftOf="@+id/image_view_repeat"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:src="@drawable/ic_forward"/>
            <ImageView
                    android:id="@+id/image_view_repeat"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_repeat"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
